# zencat

./: README.md
experiment/cmake-template-freertos/application/inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
experiment/cmake-template-freertos/application/src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
experiment/cmake-template-iap-app/application/inc/: is42s32800j_conf.h  main.h  stm32h747i_discovery_conf.h
experiment/cmake-template-iap-app/application/src/: main.c  stm32h7xx_it.c
experiment/cmake-template-iap/application/inc/: main.h  stm32h7xx_it.h
experiment/cmake-template-iap/application/src/: main.c
experiment/cmake-template-ltdc/application/inc/: main.h  stm32h7xx_hal_conf.h
experiment/cmake-template-ltdc/application/src/: main.c
experiment/cmake-template/application/src/: main.c
experiment/freertos-win/example-hello/: CMakeLists.txt
experiment/freertos-win/example-hello/src/: CMakeLists.txt  main.c
zencat-sdk/util/comport-c-win/: .gitignore  CMakeLists.txt  README.md  at.c  at.h  at_cmd.c  at_cmd.h  atagent.c  atagent.h  case1_receive.h  case2_post.h  case3_slice.h  case4_slice2.h  esp32atagent.c  esp32atagent.h  main.c  main.h  rs232.c
zencat-sdk/util/comport-python-win/: Pipfile  README.md  send-file-period.py  send-file-period2.py
zencat-sdk/util/hawkbit-device-simulator-python/: .gitignore  Pipfile  config.properties.template  curl-test-1device.py
zencat-sdk/util/pyhawkag/: .gitignore  Pipfile
zencat-sdk/util/pyhawkag/pyhawkag/: HawkAgConfig.py
zencat-sdk/util/pyhawkag/tests/: test_pyhawkag.py
zencat-sdk/util/sign-python-win/: sign.py
zencat-sdk/util/sign-python-win/mock/: fwa  fwb  server.crt  server.key
zencat-stm32-ota-client/zencat-stm32-ota-client-app/: .gitignore
zencat-stm32-ota-client/zencat-stm32-ota-client-app/application/inc/: FreeRTOSConfig.h  main.h  stm32h747i_discovery_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
zencat-stm32-ota-client/zencat-stm32-ota-client-app/application/src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
zencat-stm32-ota-client/zencat-stm32-ota-client-app/common/Src/: system_stm32h7xx_dualcore_boot_cm4_cm7.c
zencat-stm32-ota-client/zencat-stm32-ota-client-app/gui/TouchGFX/: ApplicationTemplate.touchgfx.part  target.config  zencat-stm32-ota-client-app.touchgfx
zencat-stm32-ota-client/zencat-stm32-ota-client-app/gui/TouchGFX/assets/texts/: texts.xml
zencat-stm32-ota-client/zencat-stm32-ota-client-app/gui/TouchGFX/config/gcc/: app.mk
zencat-stm32-ota-client/zencat-stm32-ota-client-app/gui/TouchGFX/config/msvs/: Application.props
zencat-stm32-ota-client/zencat-stm32-ota-client-bootloader/: .gitignore
zencat-stm32-ota-client/zencat-stm32-ota-client-bootloader/application/inc/: main.h
zencat-stm32-ota-client/zencat-stm32-ota-client-bootloader/application/src/: main.c
(+1 files in other folders)
